fix: add security, cluster bug fixes, and SQS video status consumer (#16)
* fix: add security, missing param handler, centroid test, internal stats endpoints (#3, #4, #7, #15)

- Add Spring Security with JWT auth (lenient filter, POST requires auth)
- Add SecurityConfig with internal and public filter chains
- Add UnauthorizedException and handler for 401 responses
- Add AccessDeniedException handler for 403 responses
- Add MissingServletRequestParameterException handler (returns 400)
- Add LocationStatsService, LocationStatsRepository, InternalLocationController
- Add internal /video-approved and /video-removed endpoints
- Update cluster query to filter by video_count > 0
- Add centroid accuracy integration test for Bay Area cluster
- Fix @WebMvcTest tests with @Import and JwtDecoder mock

* fix: update seed data to set video_count on conflict

The seed SQL used ON CONFLICT DO NOTHING, which meant the DB trigger
creates stats with video_count=0 and the seed INSERT is a no-op.
Change to DO UPDATE SET so video_count=1 is applied.

* feat: replace HTTP internal endpoint with SQS consumer for video status events

Replace InternalLocationController (HTTP POST /internal/locations/*)
with VideoStatusChangedHandler that listens on the video-status-events
SQS queue. This decouples location-service from synchronous HTTP calls
and enables reliable retry/DLQ handling for video count updates.

- Add spring-cloud-aws-starter-sqs dependency
- Add SqsConfig for cross-service message deserialization
- Add VideoStatusChangedEvent record and SQS handler
- Delete InternalLocationController (replaced by SQS)
- Remove @Order(1) internal security filter chain
- Add AWS/SQS configuration to application.yml
- Add tests for handler (5) and SqsConfig (1)

* test: add unit tests for unauthorized and access denied handlers

Add tests for handleUnauthorized (401) and handleAccessDenied (403)
exception handlers in GlobalExceptionHandler.

* refactor: rename requireCurrentUserId to requireAuthent